--- a/package.json
+++ b/package.json
@@ -21,7 +21,17 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@ngx-pwa/local-storage": "^5.2.0",
+    "angular2-image-upload": "^1.0.0-rc.0",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "ngx-cookie-service": "^1.0.10",
+    "ngx-mask": "^2.4.4",
+    "ngx-toastr": "^8.4.0",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -33,6 +43,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "extended-define-webpack-plugin": "^0.1.3",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
