--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng-recaptcha": "^3.0.3",
     "ngx-cookie-service": "^1.0.10",
     "ngx-mask": "^2.4.4",
     "ngx-toastr": "^8.4.0",
